--- a/html/arolax/seo-agency.html
+++ b/html/arolax/seo-agency.html
@@ -305,7 +305,7 @@
                   </div>
                   <div class="section-title-wrapper">
                     <div class="subtitle-wrapper">
-                      <span class="section-subtitle has-right-line">   Your perfect room minutes to Christ University</span>
+                      <span class="section-subtitle has-right-line">   Find your ideal stay</span>
                     </div>
                     <div class="title-wrapper">
                       <h1 class="section-title has_text_move_anim">
