--- a/html/arolax/seo-agency.html
+++ b/html/arolax/seo-agency.html
@@ -197,83 +197,16 @@
         <div class="header__nav pos-center">
           <nav class="main-menu">
             <ul>
-              <li class="menu-item-has-children">
-                <a href="#">Demos</a>
-                <ul class="dp-menu col-2">
-                  <li><a href="https://crowdytheme.com/html/arolax/branding-agency.html">Branding Agency</a></li>
-                  <li><a href="https://crowdytheme.com/html/arolax/web-agency.html">Web Agency</a></li>
-                  <li><a href="seo-agency.html">SEO Agency</a></li>
-                  <li><a href="https://crowdytheme.com/html/arolax/design-studio.html">Design Agency</a></li>
-                  <li><a href="https://crowdytheme.com/html/arolax/video-production.html">Video Agency</a></li>
-                  <li><a href="https://crowdytheme.com/html/arolax/ai-agency.html">AI Agency</a></li>
-                  <li><a href="https://crowdytheme.com/html/arolax/creative-agency-classic.html">Creative Agency Classic</a></li>
-                  <li><a href="https://crowdytheme.com/html/arolax/marketing-agency.html">Marketing Agency</a></li>
-                  <li><a href="https://crowdytheme.com/html/arolax/corporate-agency.html">Corporate Agency</a></li>
-                  <li><a href="https://crowdytheme.com/html/arolax/startup-agency.html">Startup Agency</a></li>
-                  <li><a href="https://crowdytheme.com/html/arolax/modern-agency.html">Modern Agency</a></li>
-                  <li><a href="https://crowdytheme.com/html/arolax/photography-studio.html">Photography Agency</a></li>
-                  <li><a href="https://crowdytheme.com/html/arolax/creative-agency.html">Creative Agency</a></li>
-                  <li><a href="https://crowdytheme.com/html/arolax/digital-agency.html">Digital Agency</a></li>
-                </ul>
-              </li>
-              <li><a href="https://crowdytheme.com/html/arolax/about.html">about</a></li>
-              <li class="menu-item-has-children">
-                <a href="#">portfolio</a>
-                <ul class="dp-menu">
-                  <li><a href="https://crowdytheme.com/html/arolax/portfolio-carousel.html">Portfolio Carousel</a></li>
-                  <li><a href="https://crowdytheme.com/html/arolax/portfolio-material.html">Portfolio Material</a></li>
-                  <li><a href="https://crowdytheme.com/html/arolax/portfolio-slicer.html">Portfolio Slicer</a></li>
-                  <li><a href="https://crowdytheme.com/html/arolax/portfolio-spring.html">Portfolio Spring</a></li>
-                </ul>
-              </li>
-              <li class="menu-item-has-children">
-                <a href="#">Pages</a>
-                <ul class="dp-menu">
-                  <li class="menu-item-has-children">
-                    <a href="#">service pages</a>
-                    <ul>
-                      <li><a href="https://crowdytheme.com/html/arolax/services.html">services</a></li>
-                      <li><a href="https://crowdytheme.com/html/arolax/service-details.html">service details</a></li>
-                    </ul>
-                  </li>
-                  <li class="menu-item-has-children">
-                    <a href="#">project pages</a>
-                    <ul>
-                      <li><a href="https://crowdytheme.com/html/arolax/works.html">project</a></li>
-                      <li><a href="https://crowdytheme.com/html/arolax/work-details.html">project details</a></li>
-                    </ul>
-                  </li>
-                  <li class="menu-item-has-children">
-                    <a href="#">team pages</a>
-                    <ul>
-                      <li><a href="https://crowdytheme.com/html/arolax/team.html">team</a></li>
-                      <li><a href="https://crowdytheme.com/html/arolax/team-details.html">team details</a></li>
-                    </ul>
-                  </li>
-                  <li class="menu-item-has-children">
-                    <a href="#">career pages</a>
-                    <ul>
-                      <li><a href="https://crowdytheme.com/html/arolax/career.html">career</a></li>
-                      <li><a href="https://crowdytheme.com/html/arolax/career-details.html">career details</a></li>
-                    </ul>
-                  </li>
-                  <li><a href="https://crowdytheme.com/html/arolax/faq.html">faq</a></li>
-                  <li><a href="https://crowdytheme.com/html/arolax/404.html">404 page</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="#">blog</a>
-                <ul class="dp-menu">
-                  <li><a href="https://crowdytheme.com/html/arolax/blog.html">blog</a></li>
-                  <li><a href="https://crowdytheme.com/html/arolax/blog-details.html">blog details</a></li>
-                </ul>
-              </li>
-              <li><a href="https://crowdytheme.com/html/arolax/contact.html">Contact</a></li>
+              <li><a href="#"> Home</a></li>
+              <li><a href="#"> About Us</a></li>
+              <li><a href="#"> Amenities</a></li>
+              <li><a href="#"> Contact Us</a></li>
+              <li><a href="#"> GharPayy-Gurugram</a></li>
             </ul>
           </nav>
         </div>
         <div class="header__button">
-          <a class="wc-btn wc-btn-primary btn-text-flip" href="https://crowdytheme.com/html/arolax/contact.html"><span data-text="Get started">Get
+          <a class="wc-btn wc-btn-primary btn-text-flip" href="#"><span data-text="Get started">Get
               started</span></a>
         </div>
         <div class="header__navicon d-xl-none">
@@ -283,6 +216,7 @@
       </div>
     </div>
   </header>
+
   <!-- Header area end -->
 
   <div class="has-smooth" id="has_smooth"></div>
@@ -1592,7 +1526,7 @@
                   <div class="footer-logo">
                     <img src="../../boyspg/gharpayy_logo2.png" alt="site-logo">
                   </div>
-                  <p class="info-text">GharPayy </p>
+                  <p class="info-text">Find Your Ideal Stay</p>
                   <ul class="social-links">
                     <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
                     <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
@@ -1601,38 +1535,19 @@
                   </ul>
                 </div>
                 <div class="footer-widget-wrapper">
-                  <h2 class="title">Service</h2>
-                  <ul class="footer-nav-list">
-                    <li><a href="#">UI/UX Design</a></li>
-                    <li><a href="#">Web Design</a></li>
-                    <li><a href="#">Branding</a></li>
-                    <li><a href="#">Webflow</a></li>
-                    <li><a href="#">Development</a></li>
-                  </ul>
+                  <p class="text">📍 Bangalore, India</p>
+                  <p class="text">📧 <a href="mailto:hey@gharpayy.com">hey@gharpayy.com</a></p>
+                  <p class="text">📞 <a href="tel:+917988114576">+91 83073 96042</a></p>
                 </div>
                 <div class="footer-widget-wrapper">
-                  <h2 class="title">Company</h2>
+                  <h2 class="title">Quick Links</h2>
                   <ul class="footer-nav-list">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Agency</a></li>
-                    <li><a href="#">Achievement</a></li>
-                    <li><a href="#">Career</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Amenities</a></li>
                     <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">GharPayy-Gurugram</a></li>
                   </ul>
-                </div>
-                <div class="footer-widget-wrapper newsletter">
-                  <h2 class="title">Newsletter</h2>
-                  <div class="newsletter-text">
-                    <p class="text">Feel free to reach out if you want to collaborate with us, or simply have a chat.
-                    </p>
-                  </div>
-                  <form action="#" class="subscribe-form">
-                    <div class="input-field">
-                      <span class="icon"><i class="fa-regular fa-envelope"></i></span>
-                      <input type="email" placeholder="Enter your email">
-                      <button type="submit" class="subscribe-btn"><i class="fa-solid fa-paper-plane"></i></button>
-                    </div>
-                  </form>
                 </div>
               </div>
             </div>
@@ -1640,15 +1555,14 @@
               <div class="container">
                 <div class="copyright-area-inner">
                   <div class="copyright-text">
-                    <p class="text">© 2024-25 <a href="https://themeforest.net/user/crowdytheme"
-                        target="_blank">crowdyTheme</a> Agency
-                    </p>
+                    <p class="text">© 2024-25 GharPayy. All Rights Reserved.</p>
                   </div>
                 </div>
               </div>
             </div>
           </footer>
         </div>
+        
         <!-- footer area end  -->
 
       </div>
