gharpayy tag on cards

--- a/html/arolax/seo-agency.html
+++ b/html/arolax/seo-agency.html
@@ -880,7 +880,8 @@
             <div class="swiper-slide"><img src="../../boyspg/jack/3.png" alt="Stay Image"></div>
         </div>
         <!-- Navigation Buttons -->
-     
+      <!-- Fixed Tag -->
+      <span class="gharpayy-tag">GharPayy Classics</span>
     </div>
 
     <!-- Place Name -->
@@ -905,7 +906,28 @@
     </a>
 </div>
 
+<style>
+ .gharpayy-tag {
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    background-color: rgb(0 0 0);
+    color: #FEDA1F;
+    font-size: 17px;
+    padding: 7px 10px;
+    border-radius: 0 10px;
+    font-weight: bold;
+    z-index: 10;
+}
+.swiper-container {
+    position: relative; /* Needed for absolute positioning of tag */
+}
 
+.swiper-wrapper {
+    display: flex;
+}
+
+</style>
 
 <div class="pricing-box">
   <!-- Image Slider -->
@@ -915,8 +937,8 @@
           <div class="swiper-slide"><img src="../../boyspg/jazz/2.png" alt="Stay Image"></div>
           <div class="swiper-slide"><img src="../../boyspg/jazz/3.png" alt="Stay Image"></div>
       </div>
-      <!-- Navigation Buttons -->
-   
+      <!-- Fixed Tag -->
+      <span class="gharpayy-tag">GharPayy Classics</span>
   </div>
 
   <!-- Place Name -->
@@ -942,6 +964,7 @@
 </div>
 
 
+
 <div class="pricing-box">
   <!-- Image Slider -->
   <div class="swiper-container">
@@ -951,7 +974,8 @@
           <div class="swiper-slide"><img src="../../boyspg/tomboys/3.png" alt="Stay Image"></div>
       </div>
       <!-- Navigation Buttons -->
-   
+    <!-- Fixed Tag -->
+    <span class="gharpayy-tag">GharPayy Classics</span>
   </div>
 
   <!-- Place Name -->
@@ -985,7 +1009,8 @@
           <div class="swiper-slide"><img src="../../boyspg/flatwala/3.png" alt="Stay Image"></div>
       </div>
       <!-- Navigation Buttons -->
-   
+    <!-- Fixed Tag -->
+    <span class="gharpayy-tag">GharPayy Classics</span>
   </div>
 
   <!-- Place Name -->
@@ -1019,7 +1044,8 @@
           <div class="swiper-slide"><img src="../../boyspg/homely/3.png" alt="Stay Image"></div>
       </div>
       <!-- Navigation Buttons -->
-   
+    <!-- Fixed Tag -->
+    <span class="gharpayy-tag">GharPayy Classics</span>
   </div>
 
   <!-- Place Name -->
