removed unnecessary sections

--- a/html/arolax/students.html
+++ b/html/arolax/students.html
@@ -405,7 +405,7 @@
   
 
     <!-- service area start  -->
-    <div class="container large">
+    <div class="container large mt-5">
       <section class="service-area">
         <div class="service-area-inner section-spacing">
           <div class="bg">
@@ -847,11 +847,7 @@
   
   
 
-          <div class="container large overflow-hidden">
-            <div class="image-wrapper">
-              <img class="w-100" src="https://crowdytheme.com/html/arolax/assets/imgs/gallery/img-s-44.webp" data-speed="0.7" alt="gallery image">
-            </div>
-          </div>
+
 <style>
       .counter-box .number {
         font-size: 50px !important;
