faq answers updated

--- a/html/arolax/students.html
+++ b/html/arolax/students.html
@@ -641,78 +641,93 @@
 
 
                     <!-- pricing area start  -->
-<section class="pricing-area">
-  <div class="container">
-    <div class="pricing-area-inner section-spacing">
-      <div class="section-header">
-        <div class="section-title-wrapper">
-          <div class="title-wrapper">
-            <h2 class="section-title has_text_move_anim">Frequently Asked Questions</h2>
-          </div>
-        </div>
-        <div class="accordion-wrapper has_fade_anim" data-fade-from="left">
-          <div class="accordion accordion-flush" id="accordionFlushExample">
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="flush-headingOne">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#flush-collapseOne" aria-expanded="false"
-                  aria-controls="flush-collapseOne">What is the booking process?</button>
-              </h2>
-              <div id="flush-collapseOne" class="accordion-collapse collapse"
-                aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Details about the booking process.</div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="flush-headingTwo">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#flush-collapseTwo" aria-expanded="false"
-                  aria-controls="flush-collapseTwo">What are the upfront charges?</button>
-              </h2>
-              <div id="flush-collapseTwo" class="accordion-collapse collapse show"
-                aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Information about upfront charges.</div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="flush-headingThree">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#flush-collapseThree" aria-expanded="false"
-                  aria-controls="flush-collapseThree">Can I book a PG before arriving in Bangalore?</button>
-              </h2>
-              <div id="flush-collapseThree" class="accordion-collapse collapse"
-                aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Explanation on pre-booking a PG before arrival.</div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="flush-headingFour">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#flush-collapseFour" aria-expanded="false"
-                  aria-controls="flush-collapseFour">Are meals included?</button>
-              </h2>
-              <div id="flush-collapseFour" class="accordion-collapse collapse"
-                aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Information about meal inclusions.</div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="flush-headingFive">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#flush-collapseFive" aria-expanded="false"
-                  aria-controls="flush-collapseFive">What is provided in my room?</button>
-              </h2>
-              <div id="flush-collapseFive" class="accordion-collapse collapse"
-                aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Details about room provisions.</div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+                    <section class="pricing-area">
+                      <div class="container">
+                        <div class="pricing-area-inner section-spacing">
+                          <div class="section-header">
+                            <div class="section-title-wrapper">
+                              <div class="title-wrapper">
+                                <h2 class="section-title has_text_move_anim">Frequently Asked Questions</h2>
+                              </div>
+                            </div>
+                            <div class="accordion-wrapper has_fade_anim" data-fade-from="left">
+                              <div class="accordion accordion-flush" id="accordionFlushExample">
+                                <div class="accordion-item">
+                                  <h2 class="accordion-header" id="flush-headingOne">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                      data-bs-target="#flush-collapseOne" aria-expanded="false"
+                                      aria-controls="flush-collapseOne">What is the booking process?</button>
+                                  </h2>
+                                  <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                    aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">
+                                      <strong>Step 1:</strong> Click the <em>"WhatsApp Now"</em> button and send "Hello." <br>
+                                      <strong>Step 2:</strong> Share your location preferences and exact requirements. <br>
+                                      <strong>Step 3:</strong> Receive room pictures, amenities, pricing, and all necessary details. <br>
+                                      <strong>Step 4:</strong> Choose the perfect accommodation and move in hassle-free.
+                                    </div>
+                                    
+                                  </div>
+                                </div>
+                                <div class="accordion-item">
+                                  <h2 class="accordion-header" id="flush-headingTwo">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                      data-bs-target="#flush-collapseTwo" aria-expanded="false"
+                                      aria-controls="flush-collapseTwo">What are the upfront charges?</button>
+                                  </h2>
+                                  <div id="flush-collapseTwo" class="accordion-collapse collapse show"
+                                    aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">
+                                      Yes, a refundable security deposit or token fee may apply, clearly stated at the time of booking to avoid any surprises.
+                                    </div>
+                                  </div>
+                                </div>
+                                <div class="accordion-item">
+                                  <h2 class="accordion-header" id="flush-headingThree">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                      data-bs-target="#flush-collapseThree" aria-expanded="false"
+                                      aria-controls="flush-collapseThree">Can I book a PG before arriving in Bangalore?</button>
+                                  </h2>
+                                  <div id="flush-collapseThree" class="accordion-collapse collapse"
+                                    aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">
+                                      Absolutely. We offer virtual tours or in-person visits to most properties, ensuring you make a confident choice.
+                                    </div>
+                                  </div>
+                                </div>
+                                <div class="accordion-item">
+                                  <h2 class="accordion-header" id="flush-headingFour">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                      data-bs-target="#flush-collapseFour" aria-expanded="false"
+                                      aria-controls="flush-collapseFour">Are meals included?</button>
+                                  </h2>
+                                  <div id="flush-collapseFour" class="accordion-collapse collapse"
+                                    aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">
+                                      Yes, meals are included! Enjoy consistent and hygienic food services as part of your stay, ensuring a hassle-free living experience.
+                                    </div>
+                                                                      </div>
+                                </div>
+                                <div class="accordion-item">
+                                  <h2 class="accordion-header" id="flush-headingFive">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                      data-bs-target="#flush-collapseFive" aria-expanded="false"
+                                      aria-controls="flush-collapseFive">What is provided in my room?</button>
+                                  </h2>
+                                  <div id="flush-collapseFive" class="accordion-collapse collapse"
+                                    aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">
+                                      Your room comes fully equipped with all essential amenities for a comfortable stay, including high-speed WiFi, regular housekeeping, and 24/7 security with biometric access and CCTV surveillance. Enjoy free power breakfast every morning, access to laundry facilities, and a dedicated concierge service to assist with your needs. We've got everything covered so you can focus on what truly matters!
+                                    </div>
+                                                                      </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </section>
+                    
 <!-- pricing area end  -->
 
 
