changes in faq last answer

--- a/html/arolax/students.html
+++ b/html/arolax/students.html
@@ -717,7 +717,7 @@
                                   <div id="flush-collapseFive" class="accordion-collapse collapse"
                                     aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
                                     <div class="accordion-body">
-                                      Your room comes fully equipped with all essential amenities for a comfortable stay, including high-speed WiFi, regular housekeeping, and 24/7 security with biometric access and CCTV surveillance. Enjoy free power breakfast every morning, access to laundry facilities, and a dedicated concierge service to assist with your needs. We've got everything covered so you can focus on what truly matters!
+                                      Your room includes high-speed WiFi, daily housekeeping, 24/7 security, free breakfast, laundry access, and concierge support for a hassle-free stay.  
                                     </div>
                                                                       </div>
                                 </div>
