--- a/html/arolax/seo-agency.html
+++ b/html/arolax/seo-agency.html
@@ -907,7 +907,14 @@
 </div>
 
 <style>
- .gharpayy-tag {
+
+.pricing-box{
+  padding: 0px !important;
+}
+
+
+
+.gharpayy-tag {
     position: absolute;
     bottom: 0px;
     left: 0px;
@@ -915,7 +922,7 @@
     color: #FEDA1F;
     font-size: 17px;
     padding: 7px 10px;
-    border-radius: 0 10px;
+    border-radius: 0 10px 0 0;
     font-weight: bold;
     z-index: 10;
 }
@@ -1091,7 +1098,7 @@
 
 <!-- Basic Styling -->
 <style>
- .pricing-box {
+.pricing-box {
     border: 1px solid #ddd;
     padding: 20px;
     border-radius: 10px;
@@ -1102,20 +1109,23 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.place-name{
-  padding-top: 0.6em;
-  padding-bottom: 0.2em;
+.place-name {
+    padding-top: 0.3em;
+    padding-bottom: 0.2em;
+    padding-left: 0.5em;
+    color: white;
+    background-color: #0943A0;
 }
-
-.description{
-  padding-bottom: 0;
-  margin-bottom: 0;
+.description {
+    padding-bottom: 0;
+    margin-bottom: 0;
+    padding-left: 1em;
+    margin-top: 0.5em;
 }
-
     .swiper-container {
         width: 100%;
         height: 250px;
-        border-radius: 10px;
+        border-radius: 0px;
         overflow: hidden;
     }
     .swiper-slide img {
@@ -1124,10 +1134,11 @@
         object-fit: cover;
     }
     .feature-list {
-        list-style: none;
-        padding: 0;
-        margin-top: 0 !important;
-    }
+    list-style: none;
+    padding: 0;
+    margin-top: 0 !important;
+    padding-left: 1em;
+}
     .feature-list li {
         font-size: 16px;
         margin: 10px 0;
@@ -1140,16 +1151,19 @@
         color: red;
         font-weight: bold;
         margin: 15px 0;
+        padding-left: 1em;
     }
     .whatsapp-btn {
-        display: inline-block;
-        background: #25D366;
-        color: white;
-        padding: 10px 20px;
-        border-radius: 5px;
-        text-decoration: none;
-        font-size: 16px;
-    }
+    display: inline-block;
+    background: #25D366;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-size: 16px;
+    margin-left: 1em;
+    margin-bottom: 1em;
+}
     .whatsapp-btn i {
         margin-right: 5px;
     }
