--- a/html/arolax/students.html
+++ b/html/arolax/students.html
@@ -347,7 +347,9 @@
                           </div>
                         </div>
                         <div class="text-wrapper">
-                          <p class="text has_fade_anim" data-delay="0.30">Gharpayy offers premium, ready-to-move-in PG accommodations exclusively for students coming to Bangalore. Enjoy a stress-free, fully furnished living experience just minutes away from top universities and colleges.</p>
+                          <p class="text has_fade_anim" data-delay="0.30" style="background-color: #FFD0C7;
+                          padding: 1em;
+                          border-radius: 1em;">Gharpayy offers premium, ready-to-move-in PG accommodations exclusively for students coming to Bangalore. Enjoy a stress-free, fully furnished living experience just minutes away from top universities and colleges.</p>
                         </div>
                       
                       </div>
@@ -362,7 +364,7 @@
 
 
              <!-- fun-fact area start  -->
-             <section class="fun-fact-area">
+             <section class="fun-fact-area" style="background-color: #F1E7E7;    margin-top: 4em; padding-bottom: 2em;margin-bottom: 4em;">
               <div class="container">
                 <div class="fun-fact-area-inner section-spacing-top">
                   <div class="section-header">
@@ -481,67 +483,88 @@
 <!-- places start-->
 <section class="features-area">
   <div class="container">
-      <div class="features-area-inner section-spacing-top">
-          <div class="section-header">
-              <div class="section-title-wrapper">
-                  <div class="title-wrapper">
-                      <h2 class="section-title has_text_move_anim"><span>Student</span> Accommodations Near Top Universities</h2>
-                  </div>
-              </div>
-              <div class="text-wrapper">
-                  <p class="text has_fade_anim">We provide hand-picked student PGs near:</p>
-              </div>
+    <div class="features-area-inner section-spacing-top">
+      <div class="section-header">
+        <div class="section-title-wrapper">
+          <div class="title-wrapper">
+            <h2 class="section-title has_text_move_anim">
+              <span>Student</span> Accommodations Near Top Universities
+            </h2>
           </div>
-          <div class="features-wrapper-box">
-              <div class="features-wrapper">
-                  <div class="feature-box has_fade_anim" data-fade-from="bottom" style="background: url('https://crowdytheme.com/html/arolax/assets/imgs/shape/img-s-52.webp'); background-size: cover; background-position: center; padding: 20px; border-radius: 12px; text-align: center; box-shadow: 0px 4px 10px rgba(0,0,0,0.1);">
-                      <div class="content">
-                          <h3 class="title">Christ University</h3>
-                          <p class="text">Bannerghatta, Hosur Road, Koramangala</p>
-                      </div>
-                  </div>
-                  <div class="feature-box has_fade_anim" data-fade-from="bottom" style="background: url('https://crowdytheme.com/html/arolax/assets/imgs/shape/img-s-52.webp'); background-size: cover; background-position: center; padding: 20px; border-radius: 12px; text-align: center; box-shadow: 0px 4px 10px rgba(0,0,0,0.1);">
-                      <div class="content">
-                          <h3 class="title">Jain University</h3>
-                          <p class="text">Jayanagar, Brigade Road, Koramangala</p>
-                      </div>
-                  </div>
-                  <div class="feature-box has_fade_anim" data-fade-from="bottom" style="background: url('https://crowdytheme.com/html/arolax/assets/imgs/shape/img-s-52.webp'); background-size: cover; background-position: center; padding: 20px; border-radius: 12px; text-align: center; box-shadow: 0px 4px 10px rgba(0,0,0,0.1);">
-                      <div class="content">
-                          <h3 class="title">RV College</h3>
-                          <p class="text">Mysore Road, Nagarbhavi</p>
-                      </div>
-                  </div>
-                  <div class="feature-box has_fade_anim" data-fade-from="bottom" style="background: url('https://crowdytheme.com/html/arolax/assets/imgs/shape/img-s-52.webp'); background-size: cover; background-position: center; padding: 20px; border-radius: 12px; text-align: center; box-shadow: 0px 4px 10px rgba(0,0,0,0.1);">
-                      <div class="content">
-                          <h3 class="title">MS Ramaiah College</h3>
-                          <p class="text">Mathikere, Yeshwanthpur</p>
-                      </div>
-                  </div>
-                  <div class="feature-box has_fade_anim" data-fade-from="bottom" style="background: url('https://crowdytheme.com/html/arolax/assets/imgs/shape/img-s-52.webp'); background-size: cover; background-position: center; padding: 20px; border-radius: 12px; text-align: center; box-shadow: 0px 4px 10px rgba(0,0,0,0.1);">
-                      <div class="content">
-                          <h3 class="title">Presidency University</h3>
-                          <p class="text">Yelahanka, Rajankunte</p>
-                      </div>
-                  </div>
-                  <div class="feature-box has_fade_anim" data-fade-from="bottom" style="background: url('https://crowdytheme.com/html/arolax/assets/imgs/shape/img-s-52.webp'); background-size: cover; background-position: center; padding: 20px; border-radius: 12px; text-align: center; box-shadow: 0px 4px 10px rgba(0,0,0,0.1);">
-                      <div class="content">
-                          <h3 class="title">Dayananda Sagar University</h3>
-                          <p class="text">Kumaraswamy Layout, JP Nagar</p>
-                      </div>
-                  </div>
-
-                  <div class="feature-box has_fade_anim" data-fade-from="bottom" style="background: url('https://crowdytheme.com/html/arolax/assets/imgs/shape/img-s-52.webp'); background-size: cover; background-position: center; padding: 20px; border-radius: 12px; text-align: center; box-shadow: 0px 4px 10px rgba(0,0,0,0.1);">
-                    <div class="content">
-                        <h3 class="title">And Many More...</h3>
-                    </div>
-                </div>
-
-              </div>
-          </div>
+        </div>
+        <div class="text-wrapper">
+          <p class="text has_fade_anim">We provide hand-picked student PGs near:</p>
+        </div>
       </div>
+      <div class="features-wrapper-box">
+        <div class="features-wrapper">
+          <!-- Christ University -->
+          <div class="feature-box has_fade_anim" data-fade-from="bottom" style="background: url('https://crowdytheme.com/html/arolax/assets/imgs/shape/img-s-52.webp'); background-size: cover; background-position: center; padding: 20px; border-radius: 12px; text-align: center; box-shadow: 0px 4px 10px rgba(0,0,0,0.1);">
+            <div class="content">
+              <img src="../../uni/christ.png" alt="Christ University Logo" style="width: 80px; height: auto; margin-bottom: 10px;">
+              <h3 class="title">Christ University</h3>
+              <p class="text">Bannerghatta, Hosur Road, Koramangala</p>
+            </div>
+          </div>
+
+          <!-- Jain University -->
+          <div class="feature-box has_fade_anim" data-fade-from="bottom" style="background: url('https://crowdytheme.com/html/arolax/assets/imgs/shape/img-s-52.webp'); background-size: cover; background-position: center; padding: 20px; border-radius: 12px; text-align: center; box-shadow: 0px 4px 10px rgba(0,0,0,0.1);">
+            <div class="content">
+              <img src="https://upload.wikimedia.org/wikipedia/en/4/4b/Jain_University_logo.png" alt="Jain University Logo" style="width: 80px; height: auto; margin-bottom: 10px;">
+              <h3 class="title">Jain University</h3>
+              <p class="text">Jayanagar, Brigade Road, Koramangala</p>
+            </div>
+          </div>
+
+          <!-- RV College -->
+          <div class="feature-box has_fade_anim" data-fade-from="bottom" style="background: url('https://crowdytheme.com/html/arolax/assets/imgs/shape/img-s-52.webp'); background-size: cover; background-position: center; padding: 20px; border-radius: 12px; text-align: center; box-shadow: 0px 4px 10px rgba(0,0,0,0.1);">
+            <div class="content">
+              <img src="https://upload.wikimedia.org/wikipedia/en/8/84/RVCE_logo.png" alt="RV College Logo" style="width: 80px; height: auto; margin-bottom: 10px;">
+              <h3 class="title">RV College</h3>
+              <p class="text">Mysore Road, Nagarbhavi</p>
+            </div>
+          </div>
+
+          <!-- MS Ramaiah College -->
+          <div class="feature-box has_fade_anim" data-fade-from="bottom" style="background: url('https://crowdytheme.com/html/arolax/assets/imgs/shape/img-s-52.webp'); background-size: cover; background-position: center; padding: 20px; border-radius: 12px; text-align: center; box-shadow: 0px 4px 10px rgba(0,0,0,0.1);">
+            <div class="content">
+              <img src="https://upload.wikimedia.org/wikipedia/en/f/fd/MS_Ramaiah_Institute_of_Technology_logo.png" alt="MS Ramaiah College Logo" style="width: 80px; height: auto; margin-bottom: 10px;">
+              <h3 class="title">MS Ramaiah College</h3>
+              <p class="text">Mathikere, Yeshwanthpur</p>
+            </div>
+          </div>
+
+          <!-- Presidency University -->
+          <div class="feature-box has_fade_anim" data-fade-from="bottom" style="background: url('https://crowdytheme.com/html/arolax/assets/imgs/shape/img-s-52.webp'); background-size: cover; background-position: center; padding: 20px; border-radius: 12px; text-align: center; box-shadow: 0px 4px 10px rgba(0,0,0,0.1);">
+            <div class="content">
+              <img src="https://upload.wikimedia.org/wikipedia/en/0/07/Presidency_University%2C_Bangalore_Logo.png" alt="Presidency University Logo" style="width: 80px; height: auto; margin-bottom: 10px;">
+              <h3 class="title">Presidency University</h3>
+              <p class="text">Yelahanka, Rajankunte</p>
+            </div>
+          </div>
+
+          <!-- Dayananda Sagar University -->
+          <div class="feature-box has_fade_anim" data-fade-from="bottom" style="background: url('https://crowdytheme.com/html/arolax/assets/imgs/shape/img-s-52.webp'); background-size: cover; background-position: center; padding: 20px; border-radius: 12px; text-align: center; box-shadow: 0px 4px 10px rgba(0,0,0,0.1);">
+            <div class="content">
+              <img src="https://upload.wikimedia.org/wikipedia/en/6/68/DSU_logo.png" alt="Dayananda Sagar University Logo" style="width: 80px; height: auto; margin-bottom: 10px;">
+              <h3 class="title">Dayananda Sagar University</h3>
+              <p class="text">Kumaraswamy Layout, JP Nagar</p>
+            </div>
+          </div>
+
+          <!-- And Many More -->
+          <div class="feature-box has_fade_anim" data-fade-from="bottom" style="background: url('https://crowdytheme.com/html/arolax/assets/imgs/shape/img-s-52.webp'); background-size: cover; background-position: center; padding: 20px; border-radius: 12px; text-align: center; box-shadow: 0px 4px 10px rgba(0,0,0,0.1);">
+            <div class="content">
+              <h3 class="title">And Many More...</h3>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
   </div>
 </section>
+
 
 
 <!--places end-->
@@ -564,7 +587,7 @@
                 </div>
                 <div class="features-wrapper-box">
                   <div class="features-wrapper">
-                    <div class="feature-box has_fade_anim" data-fade-from="bottom">
+                    <div class="feature-box has_fade_anim how" data-fade-from="bottom">
                       <div class="thumb">
                         <img class="show-light" src="https://crowdytheme.com/html/arolax/assets/imgs/icon/icon-s-20.webp" alt="feature icon">
                         <img class="show-dark" src="https://crowdytheme.com/html/arolax/assets/imgs/icon/icon-s-20-light.webp" alt="feature icon">
@@ -574,7 +597,7 @@
                         <p class="text">Explore PG options & virtual tours online.</p>
                       </div>
                     </div>
-                    <div class="feature-box has_fade_anim" data-fade-from="bottom">
+                    <div class="feature-box has_fade_anim how" data-fade-from="bottom">
                       <div class="thumb">
                         <img class="show-light" src="https://crowdytheme.com/html/arolax/assets/imgs/icon/icon-s-20.webp" alt="feature icon">
                         <img class="show-dark" src="https://crowdytheme.com/html/arolax/assets/imgs/icon/icon-s-20-light.webp" alt="feature icon">
@@ -584,7 +607,7 @@
                         <p class="text">Book a free, no-obligation in-person or virtual tour.</p>
                       </div>
                     </div>
-                    <div class="feature-box has_fade_anim" data-fade-from="bottom">
+                    <div class="feature-box has_fade_anim how" data-fade-from="bottom">
                       <div class="thumb">
                         <img class="show-light" src="https://crowdytheme.com/html/arolax/assets/imgs/icon/icon-s-20.webp" alt="feature icon">
                         <img class="show-dark" src="https://crowdytheme.com/html/arolax/assets/imgs/icon/icon-s-20-light.webp" alt="feature icon">
@@ -601,6 +624,20 @@
             </div>
           </section>
           <!-- features area end  -->
+
+<style>
+  .how{
+    background-color: #FFD0C7;
+    padding: 1em;
+    border-radius: 1em;
+  }
+
+  .testimonial-item{
+    background-color: #F1E7E7;
+    padding: 1em;
+    border-radius: 1em;
+  }
+</style>
 
 
         <!-- about area start  -->
