blue bg for looking section

--- a/html/arolax/students.html
+++ b/html/arolax/students.html
@@ -407,28 +407,28 @@
   
 
     <!-- service area start  -->
-    <div class="container large mt-5" style="background-color: #FFD0C7;">
-      <section class="service-area" style="background-color: #FFD0C7;">
+    <div class="container large mt-5" style="background-color: #578FCA;">
+      <section class="service-area" style="background-color: #578FCA;">
         <div class="service-area-inner section-spacing">
           <div class="container">
             <div class="section-header">
               <div class="section-title-wrapper">
                 <div class="title-wrapper">
-                  <h2 class="section-title has_text_move_anim" style="color:#525252 !important;">
+                  <h2 class="section-title has_text_move_anim" >
                     Looking for <span>Secure</span> Student Accommodation?
                   </h2>
                 </div>
               </div>
             </div>
-            <div class="services-wrapper-box" style="color:#525252 !important;">
+            <div class="services-wrapper-box">
               <div class="services-wrapper">
                 <div class="has_fade_anim">
                   <a href="#">
                     <div class="service-box">
-                      <h3 class="number" style="color:#525252 !important;">01</h3>
+                      <h3 class="number" >01</h3>
                       <div class="content accomodation">
-                        <h3 class="title" style="color:#525252 !important;">Live with Your Friends</h3>
-                        <p class="text" style="color:#766a6a !important;">
+                        <h3 class="title">Live with Your Friends</h3>
+                        <p class="text" style="color:#d8d8d8 !important;">
                           Rent a private room or a shared space with your besties.
                         </p>
                       </div>
@@ -438,10 +438,10 @@
                 <div class="has_fade_anim">
                   <a href="#">
                     <div class="service-box">
-                      <h3 class="number" style="color:#525252 !important;">02</h3>
+                      <h3 class="number">02</h3>
                       <div class="content accommodation">
-                        <h3 class="title" style="color:#525252 !important;">Flexible Rental Terms</h3>
-                        <p class="text" style="color:#766a6a !important;">
+                        <h3 class="title">Flexible Rental Terms</h3>
+                        <p class="text" style="color:#d8d8d8 !important;">
                           Stay as little as 3 months with student-friendly contracts.
                         </p>
                       </div>
@@ -451,10 +451,10 @@
                 <div class="has_fade_anim">
                   <a href="#">
                     <div class="service-box">
-                      <h3 class="number" style="color:#525252 !important;">03</h3>
+                      <h3 class="number">03</h3>
                       <div class="content accommodation">
-                        <h3 class="title" style="color:#525252 !important;">Move-In Ready</h3>
-                        <p class="text" style="color:#766a6a !important;">
+                        <h3 class="title">Move-In Ready</h3>
+                        <p class="text" style="color:#d8d8d8 !important;">
                           Fully furnished rooms with a bed, wardrobe, AC, WiFi, and study desks.
                         </p>
                       </div>
